--- a/src/assets/dasboard-layout.html
+++ b/src/assets/dasboard-layout.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Excel-mini</title>
 </head>
 
 <body>
     <div id="app" class="container">
         <div class="db">
-
             <div class="db__header">
                 <h1>Excel-Mini</h1>
             </div>
